--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -54,6 +54,6 @@ Endpoints:
 #Source-Url: https://github.com/jhou1/v2mysql.git
 #Source-Url: git://github.com/jhou1/v2mysql.git
 #Source-Url: https://github.com/jhou1/v2mysql/raw/master/v2mysql.tar.gz
-Source-Url: https://github.com/nanwei/downloadable-mysql/raw/master/v2mysql.tar.gz
+#Source-Url: https://github.com/nanwei/downloadable-mysql/raw/master/v2mysql.tar.gz
 #Source-Url: https://github.com/nanwei/downloadable-mysql/raw/master/v2mysql.zip
 #Source-Url: https://github.com/nanwei/v2mysql/raw/master/v2mysql.zip
